package com.example.booking.Service;

import com.example.booking.Boeking;

public interface IBoekingAdapter {
    String maakBoeking(Boeking boeking);
    String getNaam();
}
